# orangepi_cv

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_CN.md  main.cpp  pi_cv_server.cpp  pi_cv_server.h  server.cpp  server.h
drivers/: README.md
drivers/rknpu/: rknpu_devfreq.c
drivers/rknpu/include/: rknpu_mm.h
include/: IRSensor.h  bytetrack.h  camera.h  common.h  kalmanfilter.h  rga_utils.h  rknn_model.h  server.h  servo_driver.h  threadsafequeue.h  utils.h
python/: ui.py
src/: IRSensor.cpp  camera.cpp  kalmanfilter.cpp  rga_utils.cpp  rknn_model.cpp  server.cpp  servo_driver.cpp  threadsafequeue.cpp  utils.cpp
